--- a/build.xml
+++ b/build.xml
@@ -29,12 +29,17 @@
   </target>
   
   <target name="v3.0.0">
+    <!-- create assets directories -->
     <mkdir dir="temp/v3.0.0/" />
-    <get verbose="on" src="https://github.com/music-encoding/music-encoding/releases/download/v3.0.0/MEI.3.0.0.Schemata.only.zip" dest="temp/v3.0.0/"/>
     <mkdir dir="assets/music-encoding/v3.0.0/schemata/"/>
-    <unzip src="temp/v3.0.0/MEI.3.0.0.Schemata.only.zip" dest="assets/music-encoding/v3.0.0/schemata/"></unzip>
     <mkdir dir="assets/music-encoding/v3.0.0/guidelines/"/>
+    <!-- get schemata to temp -->
+    <get verbose="on" src="https://github.com/music-encoding/music-encoding/releases/download/v3.0.0/MEI.3.0.0.Schemata.only.zip" dest="temp/v3.0.0/"/>
+    <!-- unzip schemata -->
+    <unzip src="temp/v3.0.0/MEI.3.0.0.Schemata.only.zip" dest="assets/music-encoding/v3.0.0/schemata/"/>
+    <!-- download guidelines to assets directory -->
     <get verbose="on" src="https://github.com/music-encoding/music-encoding/releases/download/v3.0.0/MEI_Guidelines_v3.0.0.pdf" dest="assets/music-encoding/v3.0.0/guidelines/"/>
+    <!-- cleanup temp -->
     <delete dir="temp/v3.0.0/"/>
   </target>
 
