Add ant:target fetching MEI 2011-05

--- a/build.xml
+++ b/build.xml
@@ -92,8 +92,35 @@
     <!-- cleanup temp -->
     <delete dir="temp/v2.0.0/"/>
   </target>
+  
+  <target name="2011-05">
+    <!-- create assets directories -->
+    <mkdir dir="temp/2011-05/" />
+    <mkdir dir="assets/music-encoding/2011-05/schemata/"/>
+    <mkdir dir="assets/music-encoding/2011-05/guidelines/"/>
+    <!-- get source to temp -->
+    <get verbose="on" src="https://github.com/music-encoding/music-encoding/archive/MEI_release_2011-05.zip" dest="temp/2011-05/"/>
+    <!-- unzip schemata -->
+    <unzip src="temp/2011-05/MEI_release_2011-05.zip" dest="assets/music-encoding/2011-05/schemata/">
+      <patternset>
+        <include name="*/schemata/*.rng"/>
+      </patternset>
+      <mapper type="flatten"/>
+    </unzip>
+    <!-- unzip guidelines -->
+    <!-- no guidelines exist in this release -->
+    <!--<unzip src="temp/2011-05/MEI_release_2011-05.zip" dest="assets/music-encoding/2011-05/guidelines/">
+      <patternset>
+        <include name="*/guidelines/*"/>
+      </patternset>
+      <mapper type="flatten"/>
+    </unzip>-->
+    <!-- cleanup temp -->
+    <delete dir="temp/2011-05/"/>
+  </target>
 
   <target name="frameworks.init">
+    <antcall target="2011-05"/>
     <antcall target="v2.0.0"/>
     <antcall target="v2.1.1"/>
     <antcall target="v3.0.0"/>
