Add properties to build.properties file

--- a/build.properties
+++ b/build.properties
@@ -1,1 +1,7 @@
+name=oXygen MEI addon
+name.short=oXygen-MEI-addon
 description=The »oXygen MEI addon« adds the ».mei« File Type to the oXygen settings and provides oXygen Document Type Associations for various versions of the Music Encoding Initiatives (MEI) schemata for validation and transformation purposes.
+version=0.1.0-alpha
+
+build.dir=build
+dist.dir=dist
