create list folder on ant init

--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
   
   <target name="init">
     <mkdir dir="${build.dir}"/>
+    <mkdir dir="${dist.dir}"/>
   </target>
   
   <target name="clean">
