--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
       <arg value="HEAD"/>
     </exec>
     <echo>Local revision: ${local.revision}</echo>
+    <property name="revision" value="${local.revision}"/>
   </target>
   
   <target name="dist">
