--- a/src/plugin/plugin.xml
+++ b/src/plugin/plugin.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE plugin PUBLIC "-//Oxygen Plugin" "../plugin.dtd">
 <plugin 
   id="de.bwbohl.oxygen-MEI-addon"
-  name="oXygen MEI addon"
+  name="@NAME@"
   description="@DESCRIPTION@"
   version="@VERSION@"
   vendor="Benjamin W. Bohl"
