--- a/build.xml
+++ b/build.xml
@@ -31,8 +31,13 @@
     <property name="revision" value="${local.revision}"/>
   </target>
   
-  <target name="dist" depends="clean,init,get-local-git-revision">
-    <copy todir="${build.dir}" flatten="true" outputencoding="UTF-8">
+  <target name="load-license">
+    <loadfile srcfile="LICENSES/LGPL-3.0.txt" encoding="utf-8" property="license"/>
+    <echo>${license}</echo>
+  </target>
+  
+  <target name="dist" depends="clean,init,get-local-git-revision,load-license">
+    <copy todir="${build.dir}" flatten="true" outputencoding="utf-8">
       <fileset dir="LICENSES" />
       <fileset dir="src">
         <include name="**/**"/>
