Divide version to versions and status

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,8 @@
 name=oXygen MEI addon
 name.short=oXygen-MEI-addon
 description=The oXygen MEI addon adds the .mei File Type to the oXygen settings and provides oXygen Document Type Associations for various versions of the Music Encoding Initiative's (MEI) schemata for validation and transformation purposes.
-version=0.1.0-alpha
+version=0.1.0
+status=alpha
 
 build.dir=build
 dist.dir=dist
