--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "encoding-tools"]
+[submodule "submodules/encoding-tools"]
 	path = submodules/encoding-tools
 	url = https://github.com/music-encoding/encoding-tools
 	branch = master
-[submodule "mec-proceedings"]
+[submodule "submodules/mec-proceedings"]
 	path = submodules/mec-proceedings
 	url = https://github.com/music-encoding/mec-proceedings
 	branch = reorganise
-[submodule "verovio"]
+[submodule "submodules/verovio"]
 	path = submodules/verovio
 	url = https://github.com/rism-ch/verovio
 	branch = master
