add assets folder to ant reset
also delete assets folder when performing ant reset task

--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,7 @@
   <target name="reset">
     <delete dir="${build.dir}"/>
     <delete dir="${dist.dir}"/>
+    <antcall target="clean.assets"/>
   </target>
 
   <target name="clean.assets">
