--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,3 @@
+before_install: openssl aes-256-cbc -K $encrypted_5cc4f88b0a0b_key -iv $encrypted_5cc4f88b0a0b_iv -in github_deploy_key_oXygen-MEI-addon.enc -out github_deploy_key_oXygen-MEI-addon -d
 language: java
 install: ant
