add git targets
based on https://github.com/bwbohl/ant-build-script by @bwbohl

--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,8 @@
     <delete dir="assets/"/>
   </target>
   
+  <!-- GIT -->
+  
   <target name="get-local-git-revision">
     <description>Get the current git revision</description>
     <exec executable="git" outputproperty="local.revision">
@@ -36,6 +38,23 @@
     <echo>Local revision: ${local.revision}</echo>
     <property name="revision" value="${local.revision}"/>
   </target>
+  
+  <target name="git-pull">
+    <exec executable="git" dir="submodules/kb-xml-schema/">
+      <arg value="pull"/>
+    </exec>
+  </target>
+  
+  <target name="git-checkout-master">
+    <property name="dir.path"/>
+    <?TODO how to submit params ?>
+    <exec executable="git" dir="${dir.path}">
+      <arg value="checkout"/>
+      <arg value="master"/>
+    </exec>
+  </target>
+  
+  <!-- /GIT -->
   
   <target name="load-license">
     <loadfile srcfile="LICENSES/LGPL-3.0.txt" encoding="utf-8" property="license"/>
