add build target for MEI v4.0.0

--- a/build.xml
+++ b/build.xml
@@ -151,6 +151,27 @@
     <copy file="${dest}/oXygen-MEI-addon.xml" todir="${dist.dir}/${revision}/"/>
   </target>
   
+  <target name="v4.0.0">
+    <!-- create assets directories -->
+    <mkdir dir="assets/music-encoding/v4.0.0/schemata/"/>
+    <mkdir dir="assets/music-encoding/v4.0.0/guidelines/"/>
+    <exec executable="git" dir="submodules/music-encoding/">
+      <arg value="checkout"/>
+      <arg value="master"/>
+    </exec>
+    <exec executable="git" dir="submodules/music-encoding/">
+      <arg value="pull"/>
+    </exec>
+    <exec executable="git" dir="submodules/music-encoding/">
+      <arg value="checkout"/>
+      <arg value="tags/v4.0.0"/>
+    </exec>
+    <echo>Copy schemata:</echo>
+    <copy verbose="true" todir="assets/music-encoding/v4.0.0/schemata/">
+      <fileset dir="submodules/music-encoding/schemata/"></fileset>
+    </copy>
+  </target>
+  
   <target name="v3.0.0">
     <!-- create assets directories -->
     <mkdir dir="temp/v3.0.0/" />
@@ -300,6 +321,7 @@
     <antcall target="v2.1.0"/>
     <antcall target="v2.1.1"/>
     <antcall target="v3.0.0"/>
+    <antcall target="v4.0.0"/>
   </target>
   
 </project>
