--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-name=oXygen MEI addon
+name=oXygen MEI addon 0.1.0-alpha
 name.short=oXygen-MEI-addon
 description=The oXygen MEI addon adds the .mei File Type to the oXygen settings and provides oXygen Document Type Associations for various versions of the Music Encoding Initiative's (MEI) schemata for validation and transformation purposes.
 version=0.1.0
