build.xml: swig test
swig test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    - name: Set up swig
+      run: swig -version
     - name: Set env.version
       if: ${{ github.ref_name == 'develop' }}
       run: echo "version=$(git describe --tags --always HEAD)" >> $GITHUB_ENV
